--- a/Gama.Atenciones.Wpf/App.xaml
+++ b/Gama.Atenciones.Wpf/App.xaml
@@ -1,7 +1,19 @@
-<Application x:Class="Gama.Atenciones.Wpf.App" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:local="clr-namespace:Gama.Atenciones.Wpf" StartupUri="MainWindow.xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" d1p1:Ignorable="d" xmlns:d1p1="http://schemas.openxmlformats.org/markup-compatibility/2006">
+<Application x:Class="Gama.Atenciones.Wpf.App" 
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
+             xmlns:local="clr-namespace:Gama.Atenciones.Wpf" 
+             StartupUri="MainWindow.xaml"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             d1p1:Ignorable="d"
+             xmlns:d1p1="http://schemas.openxmlformats.org/markup-compatibility/2006">
   <Application.Resources>
-    <ResourceDictionary>
-      <vm:ViewModelLocator x:Key="Locator" d:IsDataSource="True" xmlns:vm="clr-namespace:Gama.Atenciones.Wpf.ViewModel" />
-    </ResourceDictionary>
-  </Application.Resources>
+        <ResourceDictionary>
+            <vm:ViewModelLocator x:Key="Locator" d:IsDataSource="True" xmlns:vm="clr-namespace:Gama.Atenciones.Wpf.ViewModel" />
+            <Style TargetType="TextBox">
+                <Setter Property="Background" Value="Beige"/>
+                <Setter Property="Foreground" Value="Black"/>
+                <Setter Property="IsReadOnly" Value="True"/>
+            </Style>
+        </ResourceDictionary>
+    </Application.Resources>
 </Application>
