--- a/Gama.Atenciones.Wpf/MainWindow.xaml
+++ b/Gama.Atenciones.Wpf/MainWindow.xaml
@@ -4,9 +4,11 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Gama.Atenciones.Wpf"
+        xmlns:designData="clr-namespace:Gama.Atenciones.Wpf.DesignTimeData"
+        xmlns:controles="clr-namespace:Gama.Atenciones.Wpf.Controles"
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        
+        <controles:PersonaControl/>
     </Grid>
 </Window>
