--- a/Gama.Atenciones.Wpf/App.xaml
+++ b/Gama.Atenciones.Wpf/App.xaml
@@ -14,6 +14,7 @@
                 <Setter Property="Foreground" Value="Black"/>
                 <Setter Property="IsReadOnly" Value="True"/>
                 <Setter Property="Margin" Value="4"/>
+                <Setter Property="VerticalAlignment" Value="Center"/>
             </Style>
             <Style TargetType="TextBlock">
                 <Setter Property="Margin" Value="4"/>
