--- a/Gama.Atenciones.Wpf/Controles/PersonaControl.xaml
+++ b/Gama.Atenciones.Wpf/Controles/PersonaControl.xaml
@@ -7,7 +7,7 @@
              xmlns:designData="clr-namespace:Gama.Atenciones.Wpf.DesignTimeData"
              xmlns:util="clr-namespace:Gama.Atenciones.Biz.Util;assembly=Gama.Atenciones.Biz"
              mc:Ignorable="d"
-             Background="Gray" Height="603.616" Width="507"
+             Background="Gray" Height="497.116" Width="423"
              >
     <d:DataContext>
         <designData:DesignPersona/>
@@ -20,8 +20,6 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
-            <RowDefinition/>
-            <RowDefinition Height="10"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
@@ -34,72 +32,57 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
-        <TextBlock Text="{Binding Nombre}" FontSize="16"/>
+        <TextBlock Text="{Binding Nombre}" FontSize="16" Grid.ColumnSpan="2"/>
 
-        <Border Grid.Row="0"
-                Grid.RowSpan="3"
-                Grid.Column="1"
-                BorderThickness="2"
-                BorderBrush="Black"
-                HorizontalAlignment="Left"
-                VerticalAlignment="Center"
-                Margin="5"
-                MaxWidth="200"
-                MaxHeight="200"
-                MinWidth="60"
-                MinHeight="60">
-            <Image Source="{Binding Imagen}"/>
-        </Border>
+        <TextBox Grid.Row="1" Text="{Binding Email}" Grid.ColumnSpan="2"/>
 
-        <TextBox Grid.Row="1" Text="{Binding Email}"/>
+        <Label Grid.Row="2" Content="NIF"/>
+        <TextBox Grid.Row="2" Grid.Column="1" Text="{Binding Nif}" />
 
-        <Label Grid.Row="4" Content="NIF"/>
-        <TextBox Grid.Row="4" Grid.Column="1" Text="{Binding Nif}" />
+        <Label Grid.Row="3" Content="Nacionalidad"/>
+        <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding Nacionalidad}"/>
 
-        <Label Grid.Row="5" Content="Nacionalidad"/>
-        <TextBox Grid.Row="5" Grid.Column="1" Text="{Binding Nacionalidad}"/>
+        <Label Grid.Row="4" Content="Fecha de Nacimiento"/>
+        <DatePicker Grid.Row="4" Grid.Column="1" Text="{Binding FechaDeNacimiento}" />
 
-        <Label Grid.Row="6" Content="Fecha de Nacimiento"/>
-        <DatePicker Grid.Row="6" Grid.Column="1" Text="{Binding FechaDeNacimiento}" />
-
-        <Label Grid.Row="7" Content="Estado Civil"/>
-        <ComboBox Grid.Row="7" Grid.Column="1"
+        <Label Grid.Row="5" Content="Estado Civil"/>
+        <ComboBox Grid.Row="5" Grid.Column="1"
                   ItemsSource="{Binding Source={util:EnumBindingSource {x:Type model:EstadoCivil}}}"
                   SelectedItem="{Binding EstadoCivil}"
                   IsSynchronizedWithCurrentItem="True">
         </ComboBox>
 
-        <Label Grid.Row="8" Content="Orientación Sexual"/>
-        <ComboBox Grid.Row="8" Grid.Column="1"
+        <Label Grid.Row="6" Content="Orientación Sexual"/>
+        <ComboBox Grid.Row="6" Grid.Column="1"
                   ItemsSource="{Binding Source={util:EnumBindingSource {x:Type model:Orientacion}}}"
                   SelectedItem="{Binding Orientacion}"
                   IsSynchronizedWithCurrentItem="True"/>
 
-        <Label Grid.Row="9" Content="Identidad Sexual"/>
-        <ComboBox Grid.Row="9" Grid.Column="1"
+        <Label Grid.Row="7" Content="Identidad Sexual"/>
+        <ComboBox Grid.Row="7" Grid.Column="1"
                   ItemsSource="{Binding Source={util:EnumBindingSource {x:Type model:IdentidadSexual}}}" 
                   SelectedItem="{Binding Identidad}"
                   IsSynchronizedWithCurrentItem="True"/>
 
-        <Label Grid.Row="10" Content="Cómo conoció a Gamá"/>
-        <ComboBox Grid.Row="10" Grid.Column="1"
+        <Label Grid.Row="8" Content="Cómo conoció a Gamá"/>
+        <ComboBox Grid.Row="8" Grid.Column="1"
                   ItemsSource="{Binding Source={util:EnumBindingSource {x:Type model:ComoConocioAGama}}}" 
                   SelectedItem="{Binding ComoConocioAGama}"
                   IsSynchronizedWithCurrentItem="True"/>
 
-        <Label Grid.Row="11" Content="Nivel Académico"/>
-        <ComboBox Grid.Row="11" Grid.Column="1"
+        <Label Grid.Row="9" Content="Nivel Académico"/>
+        <ComboBox Grid.Row="9" Grid.Column="1"
                   ItemsSource="{Binding Source={util:EnumBindingSource {x:Type model:NivelAcademico}}}" 
                   SelectedItem="{Binding NivelAcademico}"
                   IsSynchronizedWithCurrentItem="True"/>
 
-        <Label Grid.Row="12" Content="Ocupación"/>
-        <ComboBox Grid.Row="12" Grid.Column="1"
+        <Label Grid.Row="10" Content="Ocupación"/>
+        <ComboBox Grid.Row="10" Grid.Column="1"
                   ItemsSource="{Binding Source={util:EnumBindingSource {x:Type model:Ocupacion}}}" 
                   SelectedItem="{Binding Ocupacion}"
                   IsSynchronizedWithCurrentItem="True"/>
 
-        <GroupBox Grid.Row="13" Grid.ColumnSpan="2" Header="Dirección">
+        <GroupBox Grid.Row="11" Grid.ColumnSpan="2" Header="Dirección">
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
