--- a/Gama.Atenciones.Wpf/App.xaml
+++ b/Gama.Atenciones.Wpf/App.xaml
@@ -2,29 +2,21 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
              xmlns:local="clr-namespace:Gama.Atenciones.Wpf" 
-             StartupUri="MainWindow.xaml"
+             StartupUri="Views/MainWindow.xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              d1p1:Ignorable="d"
              xmlns:d1p1="http://schemas.openxmlformats.org/markup-compatibility/2006">
   <Application.Resources>
         <ResourceDictionary>
             <vm:ViewModelLocator x:Key="Locator" d:IsDataSource="True" xmlns:vm="clr-namespace:Gama.Atenciones.Wpf.ViewModel" />
-            <Style TargetType="TextBox">
-                <Setter Property="Background" Value="Beige"/>
-                <Setter Property="Foreground" Value="Black"/>
-                <Setter Property="IsReadOnly" Value="True"/>
-                <Setter Property="Margin" Value="4"/>
-                <Setter Property="VerticalAlignment" Value="Center"/>
-            </Style>
-            <Style TargetType="TextBlock">
-                <Setter Property="Margin" Value="4"/>
-            </Style>
-            <Style TargetType="ComboBox">
-                <Setter Property="Background" Value="Beige"/>
-                <Setter Property="Foreground" Value="Black"/>
-                <Setter Property="IsReadOnly" Value="True"/>
-                <Setter Property="Margin" Value="4"/>
-            </Style>
+            
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Estilos/General.xaml"/>
+                <ResourceDictionary Source="Estilos/AutoCompleteTextBoxStyles.xaml"/>
+                <ResourceDictionary Source="Estilos/ResultadoDeBusquedaDataTemplate.xaml"/>
+                <ResourceDictionary Source="Estilos/EsperarResultadoDeBusquedaDataTemplate.xaml"/>
+                <ResourceDictionary Source="Assets/appbar.add.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
